--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,3 +15,17 @@ body {
     border: 1px solid black;
     border-radius: .5rem;
 }
+
+@media only screen and (min-width: 768px) {
+
+    .main {
+        max-width: 1024px;
+        margin: 1rem auto;
+    }
+
+    .main::before,
+    .main::after {
+        width: 70vw;
+    }
+
+}
