--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 1.25rem;
+
 
 }
 
@@ -39,4 +39,45 @@
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
+}
+
+.information .email::before {
+    background-image: url(/assets/img/email.png);
+}
+
+.information .localizacao::before {
+    background-image: url(/assets/img/localizacao.png);
+}
+
+.information .perfil::before {
+    background-image: url(/assets/img/perfil.png);
+}
+
+.information .whatsapp::before {
+    background-image: url(/assets/img/whatsapp.png);
+}
+
+@media only screen and (min-width: 768px) {
+    .header {
+        display: grid;
+        grid-template-areas:
+            "photo title"
+            "photo information"
+        ;
+    }
+
+    .header .photo {
+        grid-area: photo;
+        margin: 0 auto;
+    }
+
+    .header .title {
+        grid-area: title;
+        text-align: start;
+        max-width: 220px;
+    }
+
+    .header .information {
+        grid-area: information;
+    }
 }
