--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -27,6 +27,12 @@
     border: none;
 }
 
+.acordeon .trigger h2 {
+    margin: 0;
+    font-size: 1.125rem;
+
+}
+
 .acordeon .trigger:hover {
     cursor: pointer;
 }
@@ -54,7 +60,8 @@
 }
 
 .acordeon.open .content {
-    display: inline-block;
+    display: block;
     height: auto;
     opacity: 1;
+    padding: 0 1rem 1rem 2rem;
 }
