--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,6 +7,16 @@
 
 body {
     background-color: rgba(254, 254, 254, 0.826);
+    color: #000;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .main {
