Correção de bugs

--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -33,7 +33,7 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(/assets/img/github.png);
+    background-image: url(/img/github.png);
     margin-right: .5rem;
 }
 
