--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -19,6 +19,6 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(/img/ok.png);
+    background-image: url(img/ok.png);
     margin-right: .5rem;
 }
